--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
 	"private": true,
 	"scripts": {
 		"build": "nuxt build",
-		"dev": "nuxt dev",
+		"dev": "nuxt dev --host",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
 		"database": "supabase gen types typescript --project-id pzficlbhjivvldwbqzne > DatabaseDefinitions.ts"
 	},
 	"devDependencies": {
+		"@iconify-json/material-symbols": "^1.2.1",
 		"@nuxt/devtools": "latest",
+		"@nuxt/fonts": "^0.8.0",
+		"@nuxt/icon": "^1.5.1",
+		"@nuxt/ui": "^2.18.4",
 		"@nuxtjs/supabase": "^1.4.0",
 		"@pinia/nuxt": "^0.5.4",
 		"@types/node": "^22",
@@ -22,7 +26,6 @@
 	},
 	"dependencies": {
 		"nanoid": "^5.0.7",
-		"pinia": "^2.2.2",
-		"sass": "^1.78.0"
+		"pinia": "^2.2.2"
 	}
 }
