--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"scripts": {
 		"build": "nuxt build",
-		"dev": "nuxt dev --host",
+		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
@@ -12,20 +12,19 @@
 	"devDependencies": {
 		"@iconify-json/material-symbols": "^1.2.1",
 		"@nuxt/devtools": "latest",
-		"@nuxt/fonts": "^0.8.0",
 		"@nuxt/icon": "^1.5.1",
-		"@nuxt/ui": "^2.18.4",
+		"@nuxt/ui": "^3.0.0",
 		"@nuxtjs/supabase": "^1.4.0",
-		"@pinia/nuxt": "^0.5.4",
+		"@pinia/nuxt": "0.10.1",
 		"@types/node": "^22",
-		"nuxt": "^3.13.2",
-		"supabase": "^1.192.5"
+		"nuxt": "^3.16.0",
+		"supabase": "2.19.6"
 	},
 	"overrides": {
 		"vue": "latest"
 	},
 	"dependencies": {
 		"nanoid": "^5.0.7",
-		"pinia": "^2.2.2"
+		"pinia": "3.0.1"
 	}
 }
